# -------------------------------------- #
SUBDIRS =
DIST_SUBDIRS =

noinst_HEADERS =
include $(top_srcdir)/FreeRTOS_KERNEL/FreeRTOS_v5.4.2/FreeRTOSS_KERNEL/include

noinst_HEADERS += \
				 FreeRTOSConfig.h

noinst_LIBRARIES =
include $(srcdir)/Common_Demo/Makefile.am

include $(srcdir)/FreeRTOS_Kernel/Makefile.am
