
AM_CPPFLAGS =
libasynio_lib_la_SOURCES =

# ----------------------------------- #

AM_CPPFLAGS += \
		%reldir%

noinst_LTLIBRARIES = libasynio_lib.la

libasynio_lib_la_SOURCES += \
		%reldir%/AsyncIOSerial.h \
		%reldir%/AsyncIOSerial.c

libasynio_lib_la_SOURCES += \
		%reldir%/AsyncIOSocket.h \
		%reldir%/AsyncIOSocket.c

libasynio_lib_la_SOURCES += \
		%reldir%/AsyncIO.h \
		%reldir%/AsyncIO.c

libasynio_lib_la_SOURCES += \
		%reldir%/PosixMessageQueueIPC.h \
		%reldir%/PosixMessageQueueIPC.c
