

libkernel_a_CPPFLAGS = $(AM_CPPFLAGS)

noinst_LIBRARIES += libkernel.a
libkernel_a_SOURCES =

# include %reldir%/include
libkernel_a_SOURCES += \
					  %reldir%/include/FreeRTOS.h \
					  %reldir%/croutine.c \
					  %reldir%/include/croutine.h \
					  %reldir%/include/mpu_wrappers.h \
					  %reldir%/include/projdefs.h \
					  %reldir%/include/semphr.h \
					  %reldir%/include/StackMacros.h \
					  %reldir%/list.c \
					  %reldir%/include/list.h \
					  %reldir%/include/portable.h \
					  %reldir%/queue.c \
					  %reldir%/include/queue.h \
					  %reldir%/task.c \
					  %reldir%/include/task.h

