if KERNEL_V8_2_3
noinst_HEADERS += \
				  %reldir%/FreeRTOS.h \
				  %reldir%/StackMacros.h \
				  %reldir%/croutine.h \
				  %reldir%/list.h \
				  %reldir%/mpu_wrappers.h \
				  %reldir%/portable.h \
				  %reldir%/projdefs.h \
				  %reldir%/queue.h \
				  %reldir%/semphr.h \
				  %reldir%/task.h

noinst_HEADERS += \
				  %reldir%/deprecated_definitions.h \
				  %reldir%/timers.h \
				  %reldir%/event_groups.h

endif
